# ALYGitLab

./: .gitignore  Dockerfile  EDA.ipynb  README  README.txt  pyproject.toml  requirements.txt
.github/workflows/: run-notebook.yml  Текстовый документ.txt
script/: convert-jupyter-py.sh  convert-jupyter-quarto.sh  convert-quarto-html.sh
src/: clf.py
workflows/: ci-pipeline.yml  run-notebook.yml  test-notebook.yml
